# agrisentinel

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .gitignore  README.md  docker-compose.yml
deploy/caddy/: Caddyfile
deploy/grafana/: dashboard-farm.json  dashboard-security.json
deploy/mosquitto/: mosquitto.conf
deploy/nodered/: flows-agri.json
deploy/tls/: gen-certs.sh  influx-scoped-token.sh  node_client_example.py  revoke-node.sh
docs/: SETUP.md  THREAT_MODEL.md
gateway/: gateway.py
lab/adapters/codec/: json_codec.py
lab/adapters/hw/: WIRING.md  sensors.py
lab/adapters/security/: anomaly.py  audit_log.py  hmac_signer.py  keyring.py
lab/adapters/sim/: clock.py  environment.py  sensors.py
lab/adapters/transport/: mqtt_publish.py  transports.py
lab/application/: collect.py  scheduler.py
lab/domain/: model.py  ports.py
runner/: run_sim.py
tests/: test_architecture.py  test_audit_log.py  test_keyring.py  test_pipeline.py  test_security.py
